assets/css/style.css
body{
	background-color: #efefef;
}
article{
	font-size: 1.2em;
}
.space.bottom{
	margin-bottom:25px;
}
.space.top{
	margin-top: 25px;
}
.divider-slope.mb{
	margin-bottom: -7px;
}
#flat section h2.white.header{
	color: #555;
}
.divider-slope{
	width: 100%;
}
.divider-slope.flipped-x{
	-webkit-transform: scaleX(-1);
}
.divider-slope.flipped-y{
	-webkit-transform: scaleY(-1);
}
.divider-slope.flipped-x-y{
	-webkit-transform: scaleX(-1) scaleY(-1);
}
#flat .mt{
margin-top: 20px;
}
#flat .table{
  border-radius: 0px;
}
section.content{
	padding: 50px 0px;
}

section.content h2{
	font-weight: lighter;
}

.ui.page.header{
	font-weight: lighter;
	font-size: 3em;
	color: #444;
	margin-bottom: 50px;
}

.animated:hover {
	animation-duration: 1s;
	animation-fill-mode: both;
}

.animated.infinite {
	animation-iteration-count: infinite;
}

@keyframes jello {
	from, 11.1%, to {
		transform: none;
	}

	22.2% {
		transform: skewX(-12.5deg) skewY(-12.5deg);
	}

	33.3% {
		transform: skewX(6.25deg) skewY(6.25deg);
	}

	44.4% {
		transform: skewX(-3.125deg) skewY(-3.125deg);
	}

	55.5% {
		transform: skewX(1.5625deg) skewY(1.5625deg);
	}

	66.6% {
		transform: skewX(-0.78125deg) skewY(-0.78125deg);
	}

	77.7% {
		transform: skewX(0.390625deg) skewY(0.390625deg);
	}

	88.8% {
		transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
	}
}

.jello {
	animation-name: jello;
	transform-origin: center;
}

section#intro{
	background-color: #111111;
	background-size: cover; 
	background-position: center;
	-webkit-transition: .5s all ease-in-out;
	-o-transition: .5s all ease-in-out;
	transition: .5s all ease-in-out;
}
section#intro .content{
	padding:200px 0px;
}
section#intro:hover{
	background-color: #111111;
	background-image: url("../img/res/home-pattern.png");
	background-size: auto auto;
	background-position: center;
}
section#intro h1{
	font-size: 3em;
	font-weight: 100;
	text-align: center;
	color: white;
}
section#intro p{
	margin: 0px auto;
	max-width: 800px;
	font-size: 1.5em;
	font-weight: 100;
	text-align: center;
	color: white;
}

section#main-jumbo{
	margin-top: 30px;
	padding-bottom: 30px;
}

section#recent-projects{
}

#flat h2{
	color: #444;
	font-weight: 100;
	font-size: 2.5em;
}
#flat .button{
	border-radius: 0px;
}
#flat .card .header{
	font-weight: normal;
}
#flat .form .field input,
#flat .form .field textarea,
#flat .form .button{
	border-radius: 0px;
}
#flat .menu,
#flat .card,
#flat .card img{
	border-radius: 0px;
	border: 0px;
}
#flat .menu,
#flat .card{
	-webkit-box-shadow: 0 4px 8px -8px #444;
	box-shadow: 0 4px 8px -8px #444;
	transition: 0.3s box-shadow ease-in-out;
}

#flat .menu:hover,
#flat .card:hover{
	-webkit-box-shadow: 0 10px 8px -8px #AAA;
	box-shadow: 0 10px 8px -8px #AAA;
}
#flat .menu .item{
	border-left: 2px solid #fff; 
}
#flat .menu .item::before {
	background: none;
}
#flat .menu .item:first-child,
#flat .menu .item:last-child{
	border-radius: 0px;
}
#flat .menu .item:hover,
#flat .menu .item.active{
	background-color: #fff;
	border-color:#62d2a2;
	-webkit-transition: border-color 0.2s ease-in-out;
	-o-transition: border-color 0.2s ease-in-out;
	transition: border-color 0.2s ease-in-out;
}
section#what-i-do{
	color: #555;
}
section#what-i-do h2{
	font-size: 3em;
	font-weight: 100;
}

section#contact-form{
	background-color: #18876b;
	padding: 50px 0px;
}
section#contact-form input,
section#contact-form textarea{
	background-color: #fff;
	border: 0px;
	color: #18876b;
}
section#contact-form button{
	background-color: #fff;
	color:#18876b;
}
section#contact-form label{
	color:#fff;
}

section#social-profiles{
	padding: 75px 0px;
}
section#social-profiles h2{
	color: #777;
	margin-bottom: 30px;
}

section h4.white.header{
	color:#fff;
	font-size: 2em;
	font-weight: 100;
}

section#about-me a,
section#about-me .hl{
	color: #e84545;
}

section#about-me p{
	font-size: 1.3em;
	font-weight: 100;
}


section#resume p{
	font-size: 1.3em;
}
/*9df3c4-6be5b0-62d2a2-1fab89-18876b*/

